# solana-client-icp

example/: Cargo.toml  dfx.json
example/src/example_backend/: Cargo.toml  example_backend.did
example/src/example_backend/src/: lib.rs
solana-client/: Cargo.toml
solana-client/src/: client.rs  error.rs  lib.rs  provider.rs  pubsub.rs
solana-client/src/utils/: nonce_utils.rs  rpc_config.rs
utils/solana-extra/: Cargo.toml
utils/solana-extra/src/program/spl_token_2022/extension/transfer_fee/: mod.rs
wasm/: Cargo.toml
wasm/solana-client/: Cargo.toml
wasm/solana-client/src/: client.rs  provider.rs
wasm/solana-client/src/methods/: send_transaction.rs
wasm/utils/solana-extra/: Cargo.toml
wasm/utils/solana-extra/src/: utils.rs
wasm/utils/solana-extra/src/program/vote/vote_state/: mod.rs
