[package]
name = "solana-client-icp"
version = "1.18.0" # mirror solana-sdk version
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[features]

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
futures = "0.3"
http = "1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_tuple = "0.5"
serde_with = "3.9"
solana-extra-wasm = { path = "../utils/solana-extra" }
solana-sdk = { git = "https://github.com/hide-yoshi/solana-sdk-icp" }
solana-program = { git = "https://github.com/hide-yoshi/solana-sdk-icp" }
thiserror = "1"
ic-cdk = "0.16"
candid = "0.10.10"

[dev-dependencies]
#wasm-bindgen-test = "0.3.38"

